--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,40 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color:rgb(233, 240, 239);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+h1{
+  font-size: 50px;
+  color: black;
+  padding-bottom: 0;
+}
+.asd{
+  align-items: center;
+  justify-content: center;
+  display:flex;
+  flex-direction: column;
+width:100%;
+height:100vh;
+  padding:20px;
+  padding-top: 0;
+}
+button{
+  box-sizing:content-box;
+  size: 50px;
+  font-size: 30px;
+  padding: 12px 20px;
+  background-color: darkorchid;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: aliceblue;
+  outline: none;
+  border: 4px solid aliceblue ;
+  /* border-style: double; */
+  border-radius: 5px;
+  text-transform: uppercase;
+  cursor:pointer;
 }
